--- a/_config.yml
+++ b/_config.yml
@@ -10,11 +10,11 @@ locale                   : "en-US"
 title                    : "Yunhao Zhang"
 title_separator          : "-"
 name                     : &name "Yunhao Zhang"
-description              : &description "undergraduate major in astronomy"
-url                      : https://YunhaoZhang.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+description              : &description "Undergraduate major in astronomy"
+url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "AstroCloudZhang/academicpages.github.io"
-teaser                   : "Self.jpg"# filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
+repository               : "academicpages/academicpages.github.io"
+teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
 future                   : true
@@ -80,10 +80,10 @@ analytics:
 
 # Site Author
 author:
-  name             : "Yunhao Zhang"
-  avatar           : "Logo.png"
-  bio              : "Senior undergraduate student major in astronomy and astrophysics"
-  location         : "Room 114 ISB, UCSC, Santa Cruz, CA 95060, U.S.A "
+  name             : "Your Sidebar Name"
+  avatar           : "profile.png"
+  bio              : "Your biography for the left-hand sidebar"
+  location         : "Location"
   employer         :
   googlescholar    : "http://yourfullgooglescholarurl.com"
   email            :
