--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Yunhao Zhang"
-  avatar           : "Logo.png"
+  avatar           : "Logo.jpg"
   bio              : "Senior undergraduate student major in astronomy and astrophysics"
   location         : "ISB 114, UCSC"
   employer         :
