--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ author:
   name             : "Yunhao Zhang"
   avatar           : "Logo.jpg"
   bio              : "Senior undergraduate student major in astronomy and astrophysics"
-  location         : "ISB 114, UCSC"
+  location         : "Santa Cruz, California"
   employer         :
   googlescholar    : 
   email            : "zhangyunhao@pku.edu.cn"
