--- a/_config.yml
+++ b/_config.yml
@@ -106,7 +106,7 @@ author:
   stackoverflow    : 
   steam            :
   tumblr           :
-  twitter          : #
+  twitter          : "https://twitter.com/AstroCloudZhang"
   vine             :
   weibo            :
   xing             :
