--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Yunhao Zhang"
   avatar           : "Logo.jpg"
-  bio              : "Senior undergraduate student major in astronomy and astrophysics"
+  bio              : "Senior undergraduate student, Astronomy, Peking University"
   location         : "Santa Cruz, California"
   employer         :
   googlescholar    : 
