--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,10 +5,10 @@ main:
     url: /cv/
     
   - title: "Research"
-    url: /research/
+    url: /publication/
 
   - title: "Presentation"
-    url: /presentation/
+    url: /talks/
 
   - title: "Blog"
-    url: /blog/
+    url: /year-archive/
