--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Yunhao Zhang"
   avatar           : "Logo.jpg"
-  bio              : "Senior undergraduate student, Astronomy, Peking University"
+  bio              : "Undergraduate student, Astronomy & Astrophysics, Peking University"
   location         : "Santa Cruz, California"
   employer         :
   googlescholar    : 
@@ -94,7 +94,7 @@ author:
   flickr           :
   facebook         : #
   foursquare       :
-  github           : "https://github.com/AstroCloudZhang"
+  github           : "AstroCloudZhang"
   google_plus      :
   keybase          :
   instagram        :
@@ -106,7 +106,7 @@ author:
   stackoverflow    : 
   steam            :
   tumblr           :
-  twitter          : "https://twitter.com/AstroCloudZhang"
+  twitter          : "AstroCloudZhang"
   vine             :
   weibo            :
   xing             :
